# EATSM

./: .gitignore  CMakeLists.txt  README  README.md  README.odt  User_Guide.odt
input/: HeterotrophInitialisation.csv  InitialModelState.csv  InitialState.csv  OutputControlParameters.csv  Parameters.csv  Variables.csv  VolumeActual.csv
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
plot/: AddPlotLabels.m  ConvertToNaN.m  ConvertZeroToNaN.m  ExtendMatrix.m  LogMatrix.m  PrintToFile.m  SetColourOptions.m  load_data.m  load_meta_data.m  main_plotting_script.m  plot_data.m  plot_matrices.m  plot_size_spectra.m  plot_trophic_data.m  plot_vectors.m  printPlotToFile.m
src/: Main.cpp  Makefile
src/Data/: ConsumptionEvent.cpp  ConsumptionEvent.h  DataTag.cpp  DataTag.h  HeterotrophData.cpp  HeterotrophData.h  MatrixDatum.cpp  MatrixDatum.h  Tagger.cpp  Tagger.h  Types.h  VectorDatum.cpp  VectorDatum.h
src/Input/: Constants.h  FileReader.cpp  FileReader.h  InitialState.cpp  InitialState.h  Parameters.cpp  Parameters.h  RestartState.cpp  RestartState.h
src/Model/: Autotroph.cpp  Autotroph.h  Autotrophs.cpp  Autotrophs.h  Environment.cpp  Environment.h  Genome.cpp  Genome.h  HeritableTraits.cpp  HeritableTraits.h  Heterotroph.cpp  Heterotroph.h  HeterotrophProcessor.cpp  HeterotrophProcessor.h  Heterotrophs.cpp  Heterotrophs.h  HeterotrophsParallel.cpp  HeterotrophsParallel.h  Individual.cpp  Time.cpp  (+8 more)
(+46 files in other folders)
